# max_payne_kf_plugins

./: .gitignore  CMakeLists.txt  README.md
MaxPayneCore/: CMakeLists.txt  IMPKFMaterial.h  IMPKFTexture.h  MPKFType.h  MPMemoryWriter.cpp  MPMemoryWriter.h  MPType.h
MaxPayneKFExporter/: CMakeLists.txt  MPKFExporter.cpp  MPKFExporter.h  MPKFExporterDesc.cpp  MPKFExporterDesc.h  MPKFMesh.cpp  MPKFMesh.h  MPKFScene.cpp  MPKFScene.h  MPKFSkin.cpp  MPKFSkin.h  MaxPayneKFExporter.cpp  MaxPayneKFExporter.h  MaxPayneKFExporter.rc  dllmain.cpp  resource.h
MaxPayneKFImporter/: CMakeLists.txt
MaxPayneKFMaterial/: CMakeLists.txt  MPKFTexture.cpp  MPKFTexture.h  MPKFTextureDesc.cpp  MPKFTextureDesc.h  MPKFTextureSampler.cpp  MPKFTextureSampler.h  MaxPayneFKMaterial.rc  MaxPayneKFMaterial.h  dllmain.cpp  resource.h
MaxPayneKFMaterial/Material/: MPKFMaterial.cpp  MPKFMaterial.h  MPKFMaterialDesc.cpp  MPKFMaterialDesc.h  MPKFMaterialParams.cpp  MPKFMaterialParams.h
MaxPayneKFMaterial/Texture/: MPKFTexture.cpp  MPKFTexture.h  MPKFTextureParams.h
cmake/: FindMaxSDK.cmake
