project("MaxPayneCore")

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

file(GLOB_RECURSE MAX_ENGINE_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.h ${CMAKE_CURRENT_SOURCE_DIR}/*.rc ${CMAKE_CURRENT_SOURCE_DIR}/*.def)
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${MAX_ENGINE_SOURCE})

add_library(MaxPayneCore STATIC ${MAX_ENGINE_SOURCE})

set_target_properties(MaxPayneCore PROPERTIES LINKER_LANGUAGE CXX)

if (MSVC)
    target_compile_definitions(MaxPayneCore PUBLIC UNICODE _UNICODE)
endif()


target_include_directories(MaxPayneCore
    PUBLIC
    $<INSTALL_INTERFACE:include>
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
    PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    )